# peopledatalabs-python

./: .pylintrc  LICENSE  README.md  lint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-test.yml  publish.yml  python-poetry.yml  semgrep  semgrep.yaml
src/peopledatalabs/: __init__.py  logger.py  main.py  requests.py  settings.py  utils.py
src/peopledatalabs/endpoints/: __init__.py  company.py  location.py  person.py  school.py
src/peopledatalabs/models/: __init__.py  company.py  location.py  person.py  school.py
src/peopledatalabs_python/: __init__.py  defaults.py  errors.py  logger.py  main.py  models.py  requests.py  schemas.py  settings.py  utils.py
src/peopledatalabs_python/endpoints/: __init__.py  company.py  person.py
src/peopledatalabs_python/models/: __init__.py  company.py  location.py  person.py
tests/: conftest.py
tests/client/: test_autocomplete.py  test_client.py  test_ip.py  test_job_title.py  test_skill.py
tests/company/: test_company.py
tests/company/endpoints/: test_bulk.py  test_cleaner.py  test_company_cleaner.py  test_enrichment.py  test_search.py
tests/location/: test_location.py
tests/location/endpoints/: test_location_cleaner.py
tests/person/: test_person.py
tests/person/endpoints/: test_bulk.py  test_changelog.py  test_enrichment.py  test_identify.py  test_retrieve.py  test_search.py
tests/sandbox/person/: test_sandbox_enrich.py  test_sandbox_identify.py  test_sandbox_search.py
tests/school/: test_school.py
tests/school/endpoints/: test_school_cleaner.py
