[tool.poetry]
name = "peopledatalabs-python"
version = "0.1.0"
description = "PeopleDataLabs Python Client"
authors = ["Yoske Apolloni <lupodellasleppa@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.2"
pydantic = "^1.9.0"
pytest = "^7.1.1"
email-validator = "^1.1.3"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = """ \
  %(asctime)s \
  %(name)s \
  [%(levelname)8s] \
  %(message)s \
  (%(filename)s:\
  %(lineno)s)
"""
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
