[tool.poetry]
name = "peopledatalabs-python"
version = "0.3.0"
description = "PeopleDataLabs Python Client"
authors = ["Yoske Apolloni <lupodellasleppa@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.2"
email-validator = "^1.1.3"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
coverage = "^6.3.2"
docformatter = "^1.4"
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest = "^7.1.1"
pyupgrade = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = """ \
  %(asctime)s \
  %(name)s \
  [%(levelname)8s] \
  %(message)s \
  (%(filename)s:\
  %(lineno)s)
"""
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 79
