[tool.poetry]
name = "peopledatalabs"
version = "5.0.3"
description = "Official Python client for the People Data Labs API"
homepage = "https://www.peopledatalabs.com"
repository = "https://github.com/peopledatalabs/peopledatalabs-python"
documentation = "https://docs.peopledatalabs.com"
keywords = [
  "data enrichment",
  "people data labs",
  "person enrichment",
  "company enrichment",
  "search",
]
authors = ["People Data Labs <hello@peopledatalabs.com>"]
readme = "README.md"
license = "MIT License"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/peopledatalabs/peopledatalabs-python/issues"
"Source Code" = 'https://github.com/peopledatalabs/peopledatalabs-python'

[tool.poetry.dependencies]
python = "^3.8"
email-validator = ">=1.1,<3.0"
pydantic = "^2"
requests = "^2"

[tool.poetry.dev-dependencies]
autoflake = "^1.7"
black = "^24.8.0"
coverage = "^7.6.1"
docformatter = "^1.7"
flake8 = "^5.0.4"
pylint = "^3.2.7"
pytest = "^8.3.5"
pyupgrade = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = """ \
  %(asctime)s \
  %(name)s \
  [%(levelname)8s] \
  %(message)s \
  (%(filename)s:\
  %(lineno)s)
"""
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 79
